--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@tanstack/react-query": "^5.0.0",
+    "@vercel/og": "^0.6.5",
     "neopay-marketplace": "file:",
     "next": "^15.0.0",
     "react": "^18.2.0",
