--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vercel/og": "^0.6.5",
     "neopay-marketplace": "file:",
     "next": "^15.0.0",
+    "puppeteer": "^24.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.12.0",
